fix overlapping projects on collapse

--- a/src/styles/views/_history.scss
+++ b/src/styles/views/_history.scss
@@ -41,6 +41,7 @@
   .history-chunk {
     flex-grow: 1;
     position: relative;
+    overflow: hidden;
 
     .info {
       // This also needs to be relative so we can wrap the absolutely positioned
